[gd_scene load_steps=11 format=3 uid="uid://dmhrpwssmgdqj"]

[ext_resource type="Texture2D" uid="uid://cedu105xkjhyh" path="res://Assets/Characters/cofre/chestsAll.png" id="1_tfipw"]
[ext_resource type="Script" path="res://Scenes/cofre.gd" id="1_xefnk"]
[ext_resource type="PackedScene" uid="uid://bf7k6duv31sif" path="res://Scenes/Tarea_limpiar.tscn" id="2_ieewl"]
[ext_resource type="Script" path="res://Scenes/canvas_layer.gd" id="3_eutvm"]
[ext_resource type="FontFile" uid="uid://b76hg67ejv58s" path="res://Assets/Font/enchanted_land/Enchanted Land.otf" id="5_sqbbh"]
[ext_resource type="Texture2D" uid="uid://cd6xh8j6h3cug" path="res://Assets/TileSet-Items/Structures/Anvil/Pocket inventory series #2 Pixel Map/Pocket inventory series #2 Pixel Map v1.1/Png/Map inventory/Header/close/0.png" id="5_wmwuo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8h1t0"]
atlas = ExtResource("1_tfipw")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35luv"]
atlas = ExtResource("1_tfipw")
region = Rect2(32, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8dkd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h1t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35luv")
}],
"loop": true,
"name": &"Cofre",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8owkl"]
size = Vector2(23, 22)

[node name="Cofre" type="Area2D"]
position = Vector2(1, 0)
script = ExtResource("1_xefnk")

[node name="TareaLimpiar" parent="." instance=ExtResource("2_ieewl")]
position = Vector2(-20, -98)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(201, 211)
scale = Vector2(1.375, 1.375)
sprite_frames = SubResource("SpriteFrames_b8dkd")
animation = &"Cofre"
frame_progress = 0.599466

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(201.5, 213)
shape = SubResource("RectangleShape2D_8owkl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("3_eutvm")

[node name="Panel" type="Panel" parent="CanvasLayer"]
process_mode = 3
self_modulate = Color(0, 0, 0, 0)
anchors_preset = -1
anchor_left = 0.301343
anchor_top = 0.265061
anchor_right = 0.312039
anchor_bottom = 0.281388
offset_left = 102.488
offset_top = -52.76
offset_right = 389.488
offset_bottom = 97.24
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Button_si" type="Button" parent="CanvasLayer/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22
anchor_top = 0.444086
anchor_right = 0.22
anchor_bottom = 0.444086
offset_left = -4.14
offset_top = 13.0
offset_right = 58.86
offset_bottom = 44.0
theme_override_colors/font_hover_pressed_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sqbbh")
theme_override_font_sizes/font_size = 20
text = "SI"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Button_no" type="Button" parent="CanvasLayer/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.200456
anchor_top = 0.449462
anchor_right = 0.200456
anchor_bottom = 0.449462
offset_left = 118.86
offset_top = 13.0
offset_right = 181.86
offset_bottom = 44.0
theme_override_colors/font_hover_pressed_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.592157, 0, 0.0627451, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_sqbbh")
theme_override_font_sizes/font_size = 20
text = "NO"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0627178
anchor_right = 0.0522648
offset_left = 58.0
offset_top = 45.0
offset_right = 247.0
offset_bottom = 99.0
theme_override_colors/font_color = Color(0.54832, 0.225589, 0, 1)
theme_override_fonts/font = ExtResource("5_sqbbh")
theme_override_font_sizes/font_size = 25
text = "Desea iniciar la tarea de limpieza?"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Panel"]
z_index = -1
position = Vector2(153, 90.9832)
scale = Vector2(1.3125, 2.92542)
texture = ExtResource("5_wmwuo")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="button_ir_a_tarea" type="Button" parent="CanvasLayer2"]
offset_left = 11.0
offset_top = 600.0
offset_right = 68.0
offset_bottom = 634.0

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="Panel_felicidades" type="Panel" parent="CanvasLayer3"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 670.0
offset_top = 73.0
offset_right = 968.0
offset_bottom = 205.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer3/Panel_felicidades"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.126476
anchor_right = -0.0114936
offset_left = 56.6899
offset_top = 26.0
offset_right = 278.69
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.54832, 0.225589, 0, 1)
theme_override_fonts/font = ExtResource("5_sqbbh")
theme_override_font_sizes/font_size = 25
text = "¡Felicidades!
Has completado la tarea asignada
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer3/Panel_felicidades"]
z_index = -1
position = Vector2(146.5, 66)
scale = Vector2(1.29297, 2.55)
texture = ExtResource("5_wmwuo")

[node name="CanvasLayer4" type="CanvasLayer" parent="."]

[node name="Panel_consejo" type="Panel" parent="CanvasLayer4"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 355.0
offset_top = 77.0
offset_right = 653.0
offset_bottom = 209.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer4/Panel_consejo"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.126476
anchor_right = -0.0114936
offset_left = 56.6899
offset_top = 26.0
offset_right = 278.69
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.54832, 0.225589, 0, 1)
theme_override_fonts/font = ExtResource("5_sqbbh")
theme_override_font_sizes/font_size = 25
text = "¡Consejo!
Esta tarea se realiza mejor con
el personaje del mago 
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer4/Panel_consejo"]
z_index = -1
position = Vector2(150, 86)
scale = Vector2(1.29297, 3.1125)
texture = ExtResource("5_wmwuo")

[node name="Timer_cambio" type="Timer" parent="."]
process_mode = 3
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="CanvasLayer/Panel/Button_si" to="." method="_on_button_si_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Button_no" to="." method="_on_button_no_pressed"]
[connection signal="pressed" from="CanvasLayer2/button_ir_a_tarea" to="." method="_on_button_ir_a_tarea_pressed"]
